# rosie

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml  release.yaml
aur/: PKGBUILD  publish-initial.sh
debian/: build-package.sh  control
design/: js-rewrite.md  package-managers.md  rust-rewrite.md  security.md  wrangler-integration-testing.md
freebsd/: data.pkg  meta  packagesite.pkg
freebsd-package/: bootstrap-gh-pages.sh  build-package.sh  pkg-manifest.ucl  pkg-plist
freebsd/All/: rosie-0.1.3.pkg  rosie-0.1.4.pkg  rosie-0.2.0.pkg  rosie-0.3.0.pkg  rosie-0.3.1.pkg  rosie-0.3.2.pkg  rosie-0.4.0.pkg  rosie-0.5.0.pkg  rosie-0.5.1.pkg  rosie-0.5.2.pkg  rosie-0.5.3.pkg  rosie-0.5.4.pkg  rosie-0.5.5.pkg  rosie-0.5.6.pkg  rosie-0.6.0.pkg  rosie-0.6.1.pkg  rosie-0.6.2.pkg  rosie-0.6.3.pkg  rosie-0.6.4.pkg  rosie-0.7.0.pkg  rosie-0.7.1.pkg  rosie-0.7.2.pkg  rosie-0.7.3.pkg  rosie-0.7.4.pkg  rosie-0.7.5.pkg  rosie-0.7.6.pkg  rosie-0.8.0.pkg  rosie-0.8.1.pkg  rosie-0.8.2.pkg  rosie-0.8.3.pkg
local-skills/release/: SKILL.md
npm/: .gitignore
npm/rosie-skills-darwin-arm64/: package.json
npm/rosie-skills-freebsd-x64/: package.json
src/: agent.rs  agentsmd.c  agentsmd.h  agentsmd.rs  archive.rs  audit.rs  cli.rs  download.c  download.h  download.rs  http.rs  install.c  install.h  install.rs  lib.rs  link.c  link.rs  lockfile.c  lockfile.h  lockfile.rs  log.rs  main.c  npm.c  npm.h  npm.rs  report.rs  resolve.c  resolve.rs  sanitize.rs  skill.c  skill.h  skill.rs  util.c  util.h  util.rs
wasm/: Cargo.toml  api.c  build-rust.sh  build.sh  http-lib.js  http-stub.c  shim.js
wasm/.cargo/: config.toml
wasm/spike/: .gitignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json  run.sh  shim.js
wasm/spike/.cargo/: config.toml
wasm/spike/src/: lib.rs
wasm/src/: lib.rs
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
(+261 files in other folders)
