[package]
name = "rosie-wasm"
version = "0.5.6"
edition = "2021"
publish = false

[lib]
name = "rosie_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
rosie = { path = ".." }

[profile.release]
opt-level = "s"
# LTO disabled: with cdylib + LTO the wasi-libc `_initialize` export tree-
# shakes away, leaving the WASI runtime uninitialised. Without LTO it stays.
lto = false
strip = true
