[package]
name = "spike"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
# LTO is disabled because with `lto = "fat"` and a cdylib, the wasi-libc
# _initialize export gets dropped (nothing in the public surface references
# it directly), leaving the WASI runtime uninitialized — std::fs then hits
# unmapped memory inside wasi-libc. Without LTO, the constructors stay
# linked in and the _initialize export is preserved.
lto = false
strip = true
